# codebase-cartography

./: .env  .gitignore  CODEBASE.md  README.md  RECONNAISSANCE.md  analyze_graphs.py  cartography_trace.jsonl  pyproject.toml  pytest.ini
.cartography/: lineage_graph.json  module_graph.json  semanticist_report.json
dbt/: .user.yml  profiles.yml
docs/: ARCHITECTURE.md  FINAL_REPORT.md  NAVIGATOR.md  PHASE_COMMANDS.md  VIDEO_COMMANDS_MELTANO.md  VIDEO_COMMANDS_ROO_CODE.md
scripts/: analytics_report.py  export_front_page.py  export_graph_html.py  export_memgraph.py  run_demo.py  serve_dashboard.py  visualize_graph.py
src/: cartography_trace.py  cli.py  orchestrator.py  phase4.py
src/agents/: hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  dbt_manifest_lineage.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py  lineage_graph.py
src/graph_analysis/: __init__.py  analyzer.py  loader.py  visualization.py
src/models/: __init__.py  knowledge_graph.py  lineage_graph.py  module_graph.py
src/reports/: __init__.py  analytics_report.py  front_page.py
tests/: conftest.py  test_analytics_report.py  test_dbt_manifest_lineage.py  test_front_page.py  test_graph_analysis.py  test_lineage_graph.py  test_navigator_find_implementation.py  test_navigator_llm.py  test_phase4.py  test_semanticist.py  test_sql_lineage.py  test_surveyor.py
