[project]
name = "codebase-cartography"
version = "0.1.0"
description = "Automated codebase intelligence system"
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "pydantic",
    "sqlglot",
    "ollama",
    "tree-sitter>=0.25",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pyvis>=0.3.2",
]
